Several minor updates

--- a/notebooks/01.03-Construction-of-an-artificial-(but-realistic)-image.ipynb
+++ b/notebooks/01.03-Construction-of-an-artificial-(but-realistic)-image.ipynb
@@ -129,7 +129,7 @@
     "\n",
     "Bias is an offset voltage (which translates into some non-zero number of counts) added to every pixel in the image to ensure that when voltages are converted to counts there is never a negative count. Note that in the noise image above, some counts are positive and some are negative, as you would expect for a Gaussian distribution centered on zero.\n",
     "\n",
-    "The bias value is roughly the same across the CCD chip, though it's not uncommon to have \"bad\" columns in which the bias level is consistently offset from the rest of the chip.\n",
+    "The bias value is roughly the same across the CCD chip, though it's not uncommon to have \"bad\" columns and pixels in which the bias level is consistently offset from the rest of the chip.\n",
     "\n",
     "To model a bias image, we create a uniform array and, optionally, add in some \"bad\" columns. The bad columns are exaggeratesd here to ensure they are visible.\n",
     "\n",
@@ -541,66 +541,6 @@
     "2. The way to measure each of the the things we need to subtract (bias and dark current) is to take images, each of which includes read noise. That can be minimized by combining several calibration images.\n",
     "3. There is no way to subtract the read noise because it is random."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Generate some cosmic rays\n",
-    "\n",
-    "Cosmic rays appear in images as small features with sharp edges. The pixels that get hit by the cosmic ray get more counts, but adjacent ones do not. The function below adds simulated cosmic rays."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_cosmic_rays(image, number, strength=10000):\n",
-    "    \"\"\"\n",
-    "    Generate an image with a few cosmic rays.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    \n",
-    "    image: numpy array\n",
-    "        Image whose shape the cosmic array should match.\n",
-    "    number: float\n",
-    "        Number of cosmic rays to add to the image.\n",
-    "    strength : float, optional\n",
-    "        Pixel count in the cosmic rays.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    cr_image = np.zeros_like(image)\n",
-    "    \n",
-    "    # Yes, the order below is correct. The x axis is the column, which\n",
-    "    # is the second index.\n",
-    "    max_y, max_x = cr_image.shape\n",
-    "    \n",
-    "    # Get the smallest dimension to ensure the cosmic rays are within the image\n",
-    "    maximum_pos = np.min(cr_image.shape)\n",
-    "    # These will be center points of the cosmic rays, which we place away from the edges\n",
-    "    # to ensure they are visible.\n",
-    "    xy_cr = np.random.randint(0.1 * maximum_pos, 0.9 * maximum_pos, size=[number, 2])\n",
-    "    \n",
-    "    cr_length = 5 # pixels, a little big\n",
-    "    cr_width = 2\n",
-    "    theta_cr = 2 * np.pi * np.random.rand()\n",
-    "    apertures = EllipticalAperture(xy_cr, cr_length, cr_width, theta_cr)\n",
-    "    masks = apertures.to_mask(method='center')\n",
-    "    for mask in masks:\n",
-    "        cr_image += strength * mask.to_image(shape=cr_image.shape)\n",
-    "\n",
-    "    return cr_image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
