--- a/notebooks/01.04-Nonuniform-sensitivity.ipynb
+++ b/notebooks/01.04-Nonuniform-sensitivity.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the size of the variations is small, a few percent at most. "
+    "The \"donuts\" in the image are dust on elements like filters in the optical path. Note that the size of the variations is small, a few percent at most. "
    ]
   },
   {
@@ -118,6 +118,13 @@
     "dark_only = dark_current(image, dark, exposure, gain=gain, hot_pixels=True)\n",
     "sky_only = sky_background(image, sky_counts, gain=gain)\n",
     "stars_only = stars(image, 50, max_counts=max_star_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The individual pieces of the image are assembled below; it is the inclusion of the flat that makes this the closest of the simulated images to a realistic images."
    ]
   },
   {
