--- a/notebooks/01.05-Calibration-overview.ipynb
+++ b/notebooks/01.05-Calibration-overview.ipynb
@@ -128,7 +128,7 @@
    "source": [
     "### First, set parameters for the CCD\n",
     "\n",
-    "These are the same as in the previous notebook, except for the read noise, which is 100 times larger."
+    "These are the same as in the previous notebook, except for the read noise, which is 700$e-$, 100 times larger than in the previous notebook."
    ]
   },
   {
@@ -189,7 +189,7 @@
    "source": [
     "### Uncalibrated image\n",
     "\n",
-    "Below we display the uncalibrated image; in a moment we'll compare it to the calibrated version."
+    "Below we display the uncalibrated image; in a moment we'll compare it to the calibrated version. Even though they don't stand out there really are stars in  it."
    ]
   },
   {
@@ -198,7 +198,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_image(realistic_stars, cmap='gray', percu=99.9)"
+    "plt.figure(figsize=(12, 12))\n",
+    "show_image(realistic_stars, cmap='gray', percu=99.9, figsize=(9, 9))"
    ]
   },
   {
@@ -250,7 +251,18 @@
    "source": [
     "### Reducing the image cleans up the image a bit\n",
     "\n",
-    "This image does not look much better than the uncalibrated image, but remember that the read noise used in this simulated image, 700 $e^-$ per pixel, is unrealistically high."
+    "The stars stand more clearly than in the unreduced image.\n",
+    "\n",
+    "This image does not look *much* better than the uncalibrated image, but remember that the read noise used in this simulated image, 700 $e^-$ per pixel, is unrealistically high. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reducing the image increases the noise in the image\n",
+    "\n",
+    "The histogram below shows pixel values before and after calibration. The width of the distribution is a measure of the read noise. As expected, reducing the image increases the read noise. One reason one takes several calibration images of each type is to reduce the amount of noise in the calibration image. That will, in turn, keep the noise in the final image as small as possible."
    ]
   },
   {
@@ -259,25 +271,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calibrated_hist = histogram(calibrated_stars.flatten(), bins='freedman')\n",
-    "raw_stars_hist = histogram(stars_with_noise.flatten(), bins='freedman')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.figure(figsize=(9, 9))\n",
     "hist(calibrated_stars.flatten(), bins='freedman', label='calibrated star image', alpha=0.5)\n",
     "hist(stars_with_noise.flatten(), bins='freedman', label='raw star image', alpha=0.5)\n",
-    "plt.legend()"
+    "plt.legend()\n",
+    "plt.grid()\n",
+    "plt.xlabel('Count level in image')\n",
+    "plt.ylabel('Number of pixels with that count');"
    ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
