--- a/notebooks/01.06-Image-combination.ipynb
+++ b/notebooks/01.06-Image-combination.ipynb
@@ -92,10 +92,13 @@
     "\n",
     "hist(bits[0, :], bins='freedman', ax=ax[0]);\n",
     "ax[0].set_title('One sample distribution')\n",
+    "ax[0].set_xlabel('Pixel value')\n",
+    "ax[0].set_ylabel('Number of pixels')\n",
     "\n",
     "hist(average, bins='freedman', label='average', alpha=0.5, ax=ax[1]);\n",
     "hist(median, bins='freedman', label='median', alpha=0.5, ax=ax[1]);\n",
     "ax[1].set_title('{} distributions combined'.format(n_distributions))\n",
+    "ax[1].set_xlabel('Pixel value')\n",
     "ax[1].legend()"
    ]
   },
@@ -210,6 +213,7 @@
     "hist(median, bins='freedman', alpha=0.5, label='median');\n",
     "plt.legend()\n",
     "plt.xlabel('Counts')\n",
+    "plt.ylabel('Number of pixels')\n",
     "plt.semilogy();"
    ]
   },
@@ -416,15 +420,9 @@
     "hist(clip_combine, bins='freedman', alpha=0.5, label='clipped average')\n",
     "hist(median, bins='freedman', alpha=0.5, label='median');\n",
     "plt.legend()\n",
-    "plt.xlabel('Counts')\n"
+    "plt.xlabel('Counts')\n",
+    "plt.ylabel('Number of pixels')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
