--- a/notebooks/01.08-Overscan.ipynb
+++ b/notebooks/01.08-Overscan.ipynb
@@ -149,7 +149,7 @@
    "source": [
     "## Case 2: Thermo-electrically cooled Apogee Aspen CG16M\n",
     "\n",
-    "This is a low-end, research-grade CCD sold by Andor. Basic information is [here](), though you need to track down the description of the sensor chip, [KAF-16803 CCD](http://www.onsemi.com/pub/Collateral/KAF-16803-D.PDF) to find out that the overscan region of this 4096 × 4096 pixel camera extends from pixel 4097 to 4109 along one of the directions."
+    "This is a low-end, research-grade CCD sold by Andor. Basic information is [here](https://andor.oxinst.com/assets/uploads/documents/Andor/apogee/Apogee_Aspen_CG16M_Specifications.pdf), though you need to track down the description of the sensor chip, [KAF-16803 CCD](http://www.onsemi.com/pub/Collateral/KAF-16803-D.PDF) to find out that the overscan region of this 4096 × 4096 pixel camera extends from pixel 4097 to 4109 along one of the directions."
    ]
   },
   {
