--- a/notebooks/01.09-reading-images.ipynb
+++ b/notebooks/01.09-reading-images.ipynb
@@ -174,6 +174,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The [documentation for io.fits](https://astropy.readthedocs.io/en/stable/io/fits/index.html) describes more of its capabilities."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Option 2:  Use `CCDData` to read in a single image\n",
     "\n",
     "Astropy contains a `CCDData` object for representing a single image. It's not as flexible as using `astrop.io.fits` directly (for example, it assumes there is only one FITS extension and that it contains image data) but it sets up several properties that make the data easier to work with. \n",
@@ -213,6 +220,13 @@
    "outputs": [],
    "source": [
     "ccd.data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are a [number of features of `CCDData`](https://astropy.readthedocs.io/en/stable/nddata/ccddata.html) that make it convenient for working with WCS, slicing, and more. Some of those features will be discussed in more detail in the notebooks that follow."
    ]
   },
   {
