Remove some autoreload stuff

--- a/notebooks/02.01-Calibrating-bias-images.ipynb
+++ b/notebooks/02.01-Calibrating-bias-images.ipynb
@@ -21,23 +21,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### TODO: remove the reload stuff below"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -52,9 +35,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "from convenience_functions import show_image\n",
-    "\n",
-    "download_base_url = 'http://physics.mnstate.edu/craig/ccd-guide/'"
+    "from convenience_functions import show_image"
    ]
   },
   {
@@ -189,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As discussed in [the overscan notebook](01.08-Overscan.ipynb#Case-1:-Cryogenically-cooled-Large-Format-Camera-(LFC)-at-Palomar), the useful overscan region for this camera starts at the 2055$^th$ column, not column 2049 as indicated by the `BIASSEC` keyword in the header. This situation is not unusual; column 2049 is the first of the columns masked by the manufacturer from light but there is some leakage into this region from the rest of the CCD.\n",
+    "As discussed in [the overscan notebook](01.08-Overscan.ipynb#Case-1:-Cryogenically-cooled-Large-Format-Camera-(LFC)-at-Palomar), the useful overscan region for this camera starts at the 2055$^{th}$ column, not column 2049 as indicated by the `BIASSEC` keyword in the header. This situation is not unusual; column 2049 is the first of the columns masked by the manufacturer from light but there is some leakage into this region from the rest of the CCD.\n",
     "\n",
     "If you are going to overscan you need to carefully emaine the overscan in a few representative images to understand which part of the overscan to use.\n",
     "\n",
@@ -304,7 +285,7 @@
     "    save_name, _ = file_name.split('.gz')\n",
     "    \n",
     "    # Subtract the overscan\n",
-    "    ccd = ccdp.subtract_overscan(ccd, overscan=first_bias[:, 2055:], median=True)\n",
+    "    ccd = ccdp.subtract_overscan(ccd, overscan=ccd[:, 2055:], median=True)\n",
     "    \n",
     "    # Trim the overscan\n",
     "    ccd = ccdp.trim_image(ccd[:, :2048])\n",
@@ -361,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
