Add plots of distribution of dark current

--- a/notebooks/03.02-Reality-of-dark-currrent--most-of-your-dark-frame-is-noise-and-not-all-of-the-time-dependent-artifacts-are-dark-current.ipynb
+++ b/notebooks/03.02-Reality-of-dark-currrent--most-of-your-dark-frame-is-noise-and-not-all-of-the-time-dependent-artifacts-are-dark-current.ipynb
@@ -17,6 +17,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from astropy.nddata import CCDData\n",
+    "from astropy.visualization import hist\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "from convenience_functions import show_image"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,9 +54,60 @@
     "\n",
     "The image below is a combination of 20 dark frames, each a 1000 sec exposure. That exposure time was chosen so that the expected number of dark electrons was at least somewhat larger than the read noise expected in a combination of 20 images. As we saw in the previous notebook, unless that is the case the dark frames will measure read noise instead of dark current.\n",
     "\n",
-    "This camera has a dark current of $0.01 e^-$/sec/pixel and read noise of roughly $10 e^-$/read/pixel/. An exposure time of 1000 sec means an expected dark level in each exposure of $10 e^-$. By combining 20 of the images, the expected noise in the combination is reduced by a factor of $\\sqrt{20}$ to $2.2 e^-$/pixel. \n",
+    "This camera has a dark current of $0.01 e^-$/sec/pixel and read noise of roughly $10 e^-$/read/pixel/. An exposure time of 1000 sec means an expected dark level in each exposure of $10 e^-$. By combining 20 of the images, the expected noise in the combination is reduced by a factor of $\\sqrt{20}$ to $2.2 e^-$/pixel. This puts us in the \"low read noise\" limit in the previous notebook about ideal dark current.\n",
     "\n",
     "Measuring the dark current once you have the images is relatively straightforward: subtract the bias, multiply the result by the gain and then divide by the exposure time to obtain the dark current in $e^-$/pixel/sec."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dark_1000 = CCDData.read('https://zenodo.org/record/2634177/files/master_dark_exposure_1000.0.fit.bz2?download=1')\n",
+    "show_image(dark_1000, cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate the dark current for each pixel\n",
+    "\n",
+    "Recall that the dark current $d_c(T)$ is given by \n",
+    "\n",
+    "$$\n",
+    "d_c(T) = d_e(t) / t,\n",
+    "$$\n",
+    "\n",
+    "where $d_e(t)$ is the number of dark electrons in the images. That is related to the dark counts, $n_{dark}(t)$, the image values displayed in the image above, by the gain of the camera, $d_e(t) = g n_{dark}(t)$, so that\n",
+    "\n",
+    "$$\n",
+    "d_C(T) = g n_{dark}(t) / t.\n",
+    "$$\n",
+    "\n",
+    "This particular camera has a gain of $g = 1.5 e^-$/ADU."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gain = 1.5\n",
+    "exposure_time = 1000\n",
+    "dark_current = gain * dark_1000.data / exposure_time\n",
+    "\n",
+    "plt.figure(figsize=(20, 10))\n",
+    "hist(dark_current.flatten(), bins=5000, density=False);\n",
+    "#plt.semilogy()\n",
+    "plt.loglog()\n",
+    "plt.grid()\n",
+    "#plt.xlim(0, .1)\n",
+    "plt.xlabel('dark current, electrons per second')\n",
+    "plt.ylabel('Number of pixels with that dark current');\n"
    ]
   },
   {
@@ -51,7 +116,24 @@
    "source": [
     "### There is a large range in the dark current \n",
     "\n",
-    "While the vast majority of the pixels do, as expected, have very low dark current it is much higher for other pixels. The largest values in the image above are not accurate. They are the upper limit of this CCD's readout, 65563, converted to dark current. \n",
+    "While the vast majority of the pixels do, as expected, have very low dark current, it is much higher for other pixels. These pixels, called hot pixels, can occur even in cryogenically-cooled cameras. \n",
+    "\n",
+    "The vast majority of the pixels in the image have a dark current around the value promised by the manufacturer, 0.01 $e^-$/sec; the highest nominally have dark current 98 $e^-$/sec.\n",
+    "\n",
+    "However, there is  an upper limit to the dark current that can be measured in a particular exposure because there is an upper limit to the number of counts a CCD can represent. For this camera that limit is $2^{16} -1$, or $65,563$. If we convert that to a dark current for a 1000 sec exposure, it is approximately 98 $e^-$/sec. For the hottest pixels in this image, that is the *lower limit* of the dark current for those pixels.\n",
+    "\n",
+    "The dark current is also not well estimated for pixels a bit below the maximum because CCDs stop responding linearly once they pass a pixel value that depends on the camera. For this camera, the linearity limit is around 55,000 counts, corresponding to a dark current of roughly  82 $e^-$/sec.\n",
+    "\n",
+    "One can, in principle, also check whether the hot pixels have a constant dark current that does not change with time by creating a number of these darks at different exposure times and plotting the dark current as a function of exposure time for the hot pixels. If the dark current is constant then the dark counts will be properly removed when the dark is subtracted from the science image. If the dark current is not constant, the pixel should be excluded from analysis.\n",
+    "\n",
+    "The fraction of very hot pixels, those above 1 $e^-$/sec, is relatively small, roughly 0.1% of the pixels."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to handle hot pixels\n",
     "\n",
     "There are a few ways one could handle this, which can be used in combination with each other:\n",
     "\n",
@@ -60,7 +142,7 @@
     "+ Always take dark images with exposure times that match your flat and light frames and subtract dark current as usual.\n",
     "+ Take one set of darks with exposure equal to the *longest* exposure time in your flat and light images and scale the dark current downwards to match your other exposure times.\n",
     "\n",
-    "#### One thing NOT to do\n",
+    "## One thing NOT to do\n",
     "\n",
     "Do not take short dark frames and scale them up to longer exposure times. Modern cameras, even thermo-electrically cooled ones, have very low dark current. If your dark frames have low exposure time then most of the pixels are measuring read noise, not dark current. If you rescale those images to a longer exposure time then you inappropriately amplify that noise. Ideally, the expected dark counts (or dark electrons) in your dark frames should be at least a few times larger than the expected read noise in the frames you combine to make a reference dark."
    ]
@@ -77,13 +159,6 @@
     "3. A consequence of 1 and 2 is that you should almost never scale your dark frames up to a longer exposure time because you will amplify noise instead of eliminating dark current.\n",
     "3. Identify hot pixels and mask them out or otherwise deal with them.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
