Add LFC chip to discussion of dark current

--- a/notebooks/03.02-Reality-of-dark-currrent--most-of-your-dark-frame-is-noise-and-not-all-of-the-time-dependent-artifacts-are-dark-current.ipynb
+++ b/notebooks/03.02-Reality-of-dark-currrent--most-of-your-dark-frame-is-noise-and-not-all-of-the-time-dependent-artifacts-are-dark-current.ipynb
@@ -22,10 +22,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from astropy.nddata import CCDData\n",
-    "from astropy.visualization import hist\n",
+    "from pathlib import Path\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "\n",
+    "from astropy import units as u\n",
+    "from astropy.nddata import CCDData\n",
+    "from astropy.visualization import hist\n",
+    "from astropy.stats import mad_std\n",
+    "from ccdproc import ImageFileCollection, subtract_overscan, trim_image, combine, subtract_bias\n",
     "\n",
     "from convenience_functions import show_image"
    ]
@@ -34,9 +40,109 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Case 1: Cryogenically cooled camera\n",
+    "## Case 1: Cryogenically cooled  Large Format Camera (LFC) at Palomar\n",
     "\n",
-    "I REALLY NEED TO LOOK AT THE IMAGES FOR THIS"
+    "The images in this section are from chip 0 of the LFC at the Palomar 200-inch telescope. Technical information about the camera is [here](http://www.astro.caltech.edu/palomar/observer/200inchResources/lfcspecs.html). The technical information says nothing about the expected dark current of this camera. The expectation for cameras cooled by liquid nitrogen is that their dark current is essentially zero.\n",
+    "\n",
+    "What we will see with this camera is that\n",
+    "\n",
+    "+ not all of the pixels have negligible dark current, and \n",
+    "+ not all of the counts in a dark image are from dark current.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we read in the image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calibrated_images = Path('.') / 'reduced'\n",
+    "combined_dark_lfc = CCDData.read(calibrated_images / 'combined_300s_darks.fits')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examine the image\n",
+    "\n",
+    "The full image is on the left, and the lower left corner is shown on the right. The light area in the lower left corner is due to senor glow, which is light emitted by the electronics of the CCD. The counts in the image due to sensor glow should grow linearly with exposure time, like dark counts do, but the pixel values are much higher than for pixels whose counts are due to dark current.\n",
+    "\n",
+    "The top right panel in the figure below shows the part of the CCD near the sensor glow; pixel values are several thousand counts. The bottom right panel shows a portion of the CCD in the upper right part of the chip; pixel values are *much* lower, typically under 10. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(10, 10))\n",
+    "whole_im_ax = plt.subplot(121)\n",
+    "glow_ax = plt.subplot(222)\n",
+    "dark_ax = plt.subplot(224)\n",
+    "\n",
+    "show_image(combined_dark_lfc, cmap='gray', ax=whole_im_ax, fig=fig)\n",
+    "whole_im_ax.set_title('Entire chip')\n",
+    "\n",
+    "show_image(combined_dark_lfc[:200, :200], cmap='gray', ax=glow_ax, fig=fig)\n",
+    "glow_ax.set_title('Lower left corner of chip')\n",
+    "\n",
+    "show_image(combined_dark_lfc[-200:, -200:], cmap='gray', ax=dark_ax, fig=fig)\n",
+    "dark_ax.set_title('Upper right corner of chip')\n",
+    "\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dark current in this CCD\n",
+    "\n",
+    "The histogram below shows dark current along the horizontal axis and the number of pixels in the CCD with that dark current along the vertical axis. Since there is obvious sensor glow in the darks three distributions are shown:\n",
+    "\n",
+    "+ The full sensor, which at first glance has some pixels with dark current as high as 10 $e^-$/sec.\n",
+    "+ The portion of the sensor *excluding* the sensor glow, in which the dark current is, as expected, low, though there is a small fraction of \"hot pixels\" with dark current around 1 $e^-$/sec.\n",
+    "+ The sensor glow region. That region is apparent in the clump of pixels with equivalent dark current of 0.5$e^-$/sec and higher. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gain = 2.0\n",
+    "exposure_time = 300\n",
+    "dark_current_ln2 = gain * combined_dark_lfc.data / exposure_time\n",
+    "\n",
+    "plt.figure(figsize=(20, 10))\n",
+    "hist(dark_current_ln2.flatten(), bins=5000, density=False, alpha=0.5, color='C0',\n",
+    "     label='Full sensor');\n",
+    "hist(dark_current_ln2[200:, 200:].flatten(), bins=5000, density=False, alpha=0.5, color='C1',\n",
+    "     label='Sensor glow excluded')\n",
+    "hist(dark_current_ln2[:200, :200].flatten(), bins=5000, density=False, alpha=0.5, color='C9',\n",
+    "     label='Sensor glow region');\n",
+    "#plt.semilogy()\n",
+    "plt.loglog()\n",
+    "\n",
+    "plt.grid()\n",
+    "plt.vlines(2 * 11/exposure_time/np.sqrt(3), 0.1, 8e6)\n",
+    "plt.ylim(0.1, 8e6)\n",
+    "#plt.xlim(0, .1)\n",
+    "plt.legend()\n",
+    "plt.xlabel('dark current, electrons per second')\n",
+    "plt.ylabel('Number of pixels with that dark current');\n"
    ]
   },
   {
@@ -102,6 +208,7 @@
     "\n",
     "plt.figure(figsize=(20, 10))\n",
     "hist(dark_current.flatten(), bins=5000, density=False);\n",
+    "plt.vlines(10/exposure_time/np.sqrt(20), *plt.ylim())\n",
     "#plt.semilogy()\n",
     "plt.loglog()\n",
     "plt.grid()\n",
@@ -127,6 +234,22 @@
     "One can, in principle, also check whether the hot pixels have a constant dark current that does not change with time by creating a number of these darks at different exposure times and plotting the dark current as a function of exposure time for the hot pixels. If the dark current is constant then the dark counts will be properly removed when the dark is subtracted from the science image. If the dark current is not constant, the pixel should be excluded from analysis.\n",
     "\n",
     "The fraction of very hot pixels, those above 1 $e^-$/sec, is relatively small, roughly 0.1% of the pixels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 10))\n",
+    "hist(dark_current_ln2[200:, 200:].flatten(), bins=5000, density=True, alpha=0.5, label='Cryogenically cooled, excluding sensor glow');\n",
+    "hist(dark_current.flatten(), bins=5000, density=True, alpha=0.5, label='Thermo-electrically cooled');\n",
+    "plt.grid()\n",
+    "plt.loglog()\n",
+    "plt.xlabel('dark current, electrons per second')\n",
+    "plt.ylabel('Number of pixels with that dark current');\n",
+    "plt.legend();"
    ]
   },
   {
